# RAGAcademy

./: README.md  main.py  pyproject.toml  requirements.txt
DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
DataIngestParsing/data/databases/: company.db
DataIngestParsing/data/structured_files/: inventory.xlsx
DataIngestParsing/data/text_files/: machine_learning.txt  python_intro.txt
VectorEmbeddingAndVectorDatabases/: embedding.ipynb  openaiembeddings.ipynb
