[project]
name = "ragacademy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.2",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "pandas>=3.0.1",
    "pdfminer>=20191125",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.2.3",
    "tiktoken>=0.12.0",
    "unstructured[docx]>=0.21.5",
]
